--- a/baseline-kdd-exp1.ipynb
+++ b/baseline-kdd-exp1.ipynb
@@ -682,7 +682,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1eacc1a9ad0>"
+       "<matplotlib.legend.Legend at 0x273c5346a50>"
       ]
      },
      "execution_count": 19,
