--- a/baseline-kdd-exp2.ipynb
+++ b/baseline-kdd-exp2.ipynb
@@ -483,7 +483,7 @@
    "source": [
     "def train(mymodel, lr, N_epochs, batch_size):\n",
     "    global writer\n",
-    "    log_dir = os.path.join(\"logs/exp1\", datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\"))\n",
+    "    log_dir = os.path.join(\"logs/exp2\", datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\"))\n",
     "    writer = SummaryWriter(log_dir=log_dir)\n",
     "    global tot_iters\n",
     "    tot_iters = 0\n",
@@ -678,7 +678,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2a77df66290>"
+       "<matplotlib.legend.Legend at 0x13da3647c50>"
       ]
      },
      "execution_count": 19,
