Upload newest verion code, TODO, and paper review.

--- a/baseline-kdd-exp1.ipynb
+++ b/baseline-kdd-exp1.ipynb
@@ -315,10 +315,10 @@
     "            # 多个门网络的输出\n",
     "            gate_net = [gate(x) for gate in self.gate_layers]  # n_task个(b,n_expert)\n",
     "            \n",
-    "            # 记录每个batch内第一个样本的门网络的输出\n",
+    "            # 记录每个batch内各expert的平均门网络的输出\n",
     "            for i in range(self.n_task):\n",
     "                for j in range(self.n_expert):\n",
-    "                    writer.add_scalar(f\"task_{i}/expert_{j}_weight\", gate_net[i][0][j], tot_iters)\n",
+    "                    writer.add_scalar(f\"task_{i}/expert_{j}_weight\", gate_net[i][:,j].mean(), tot_iters)\n",
     "\n",
     "            # towers计算：对应的门网络乘上所有的专家网络\n",
     "            towers_input = []\n",
@@ -399,7 +399,16 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logs/exp1_MMoE/lr=0.0001_N_epochs=50_batch_size=256_n_expert=4n_task=2_expert_dropout=0_tower_dropout=0\n",
+      "model/exp1_MMoE/lr=0.0001_N_epochs=50_batch_size=256_n_expert=4n_task=2_expert_dropout=0_tower_dropout=0\n"
+     ]
+    }
+   ],
    "source": [
     "# model config\n",
     "feature_dim=114\n",
@@ -409,7 +418,25 @@
     "use_gate=True\n",
     "gate_dropout=0.2\n",
     "tower_dropout=0\n",
-    "expert_dropout=0"
+    "expert_dropout=0\n",
+    "\n",
+    "# train config\n",
+    "batch_size=256\n",
+    "N_epochs=50\n",
+    "lr=0.0001\n",
+    "\n",
+    "model_name=\"exp1_MMoE\"\n",
+    "\n",
+    "log_dir = f\"logs/\"+model_name+\"/\"\\\n",
+    "+f\"lr={lr}_N_epochs={N_epochs}_batch_size={batch_size}_n_expert={n_expert}\"\\\n",
+    "+f\"n_task={n_task}_expert_dropout={expert_dropout}_tower_dropout={tower_dropout}\"\n",
+    "\n",
+    "bestmodel_save_dir = f\"model/\"+model_name+\"/\"\\\n",
+    "+f\"lr={lr}_N_epochs={N_epochs}_batch_size={batch_size}_n_expert={n_expert}\"\\\n",
+    "+f\"n_task={n_task}_expert_dropout={expert_dropout}_tower_dropout={tower_dropout}\"\n",
+    "\n",
+    "print(log_dir)\n",
+    "print(bestmodel_save_dir)"
    ]
   },
   {
@@ -475,8 +502,8 @@
    },
    "outputs": [],
    "source": [
-    "if not os.path.exists(\"model/exp1/\"):\n",
-    "    os.makedirs(\"model/exp1/\") "
+    "if not os.path.exists(\"model/\"+model_name):\n",
+    "    os.makedirs(\"model/\"+model_name) "
    ]
   },
   {
@@ -488,7 +515,6 @@
    "source": [
     "def train(mymodel, lr, N_epochs, batch_size):\n",
     "    global writer\n",
-    "    log_dir = os.path.join(\"logs/exp1\", datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\"))\n",
     "    writer = SummaryWriter(log_dir=log_dir)\n",
     "    global tot_iters\n",
     "    tot_iters = 0\n",
@@ -562,7 +588,7 @@
     "        # save best model\n",
     "        if (val_losses[-1] < best_loss):\n",
     "            print(\"current epoch is the best so far. Saving model...\")\n",
-    "            torch.save(mymodel.state_dict(), f'model/exp1/best_model_{lr}_{N_epochs}_{batch_size}_{gate_dropout}_{expert_dropout}_{tower_dropout}')\n",
+    "            torch.save(mymodel.state_dict(), bestmodel_save_dir)\n",
     "            best_loss = val_losses[-1]\n",
     "    \n",
     "    writer.close()\n",
@@ -573,20 +599,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4d6c1be9-7753-4ef2-91f4-ced484eb0a79",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "batch_size=256\n",
-    "N_epochs=50\n",
-    "lr=0.0001"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
    "id": "33fc8dbd-93af-4087-b32a-d0132258ec9f",
    "metadata": {
     "tags": []
@@ -673,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "172da090-cd5d-4ac9-8e85-f7b9337bd952",
    "metadata": {
     "tags": []
@@ -682,10 +694,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x273c5346a50>"
+       "<matplotlib.legend.Legend at 0x206d11804d0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -724,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "07be8985-798b-47da-aa00-f79836a6ee4f",
    "metadata": {
     "tags": []
@@ -733,7 +745,7 @@
    "source": [
     "# load best model based on validation\n",
     "mybestmodel=MMoE(feature_dim=feature_dim,expert_dim=expert_dim,n_expert=n_expert,n_task=n_task,use_gate=use_gate)\n",
-    "mybestmodel.load_state_dict(torch.load(f'model/exp1/best_model_{lr}_{N_epochs}_{batch_size}_{gate_dropout}_{expert_dropout}_{tower_dropout}'))\n",
+    "mybestmodel.load_state_dict(torch.load(bestmodel_save_dir))\n",
     "mybestmodel=mybestmodel.to(device)\n",
     "\n",
     "x_test_d, x_test_c=x_test_d.to(device), x_test_c.to(device)\n",
@@ -749,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "89fdb611-85ee-4def-809e-154933380a03",
    "metadata": {
     "tags": []
@@ -770,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "8eb92365-d745-4b88-b692-517b7a997c1b",
    "metadata": {
     "tags": []
@@ -794,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "a37a0feb-d23e-4712-a100-b9419f2f9012",
    "metadata": {},
    "outputs": [
@@ -804,7 +816,7 @@
        "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "617f90bd-9271-4214-bc54-d653bb2f26bb",
    "metadata": {
     "tags": []
@@ -829,7 +841,7 @@
        "       8.0539647e-04, 2.8418475e-03], dtype=float32)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "70d5c716-ba7e-451b-b52f-a0b51e7224ca",
    "metadata": {
     "tags": []
@@ -854,7 +866,7 @@
        "       2.1652013e-01, 1.5273413e-01], dtype=float32)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "3c95ddff-8e28-412d-a98e-2465433e5b03",
    "metadata": {
     "tags": []
@@ -877,7 +889,7 @@
        "tensor([0., 1., 1., 0., 1., 0., 1., 1., 0., 0.])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
