--- a/baseline-kdd-exp2.ipynb
+++ b/baseline-kdd-exp2.ipynb
@@ -401,7 +401,16 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logs/exp2_MMoE/lr=0.0001_N_epochs=50_batch_size=256_n_expert=4n_task=2_expert_dropout=0_tower_dropout=0\n",
+      "model/exp2_MMoE/lr=0.0001_N_epochs=50_batch_size=256_n_expert=4n_task=2_expert_dropout=0_tower_dropout=0\n"
+     ]
+    }
+   ],
    "source": [
     "# model config\n",
     "feature_dim=114\n",
@@ -411,7 +420,25 @@
     "use_gate=True\n",
     "gate_dropout=0.2\n",
     "tower_dropout=0\n",
-    "expert_dropout=0"
+    "expert_dropout=0\n",
+    "\n",
+    "# train config\n",
+    "batch_size=256\n",
+    "N_epochs=50\n",
+    "lr=0.0001\n",
+    "\n",
+    "model_name=\"exp2_MMoE\"\n",
+    "\n",
+    "log_dir = f\"logs/\"+model_name+\"/\"\\\n",
+    "+f\"lr={lr}_N_epochs={N_epochs}_batch_size={batch_size}_n_expert={n_expert}\"\\\n",
+    "+f\"n_task={n_task}_expert_dropout={expert_dropout}_tower_dropout={tower_dropout}\"\n",
+    "\n",
+    "bestmodel_save_dir = f\"model/\"+model_name+\"/\"\\\n",
+    "+f\"lr={lr}_N_epochs={N_epochs}_batch_size={batch_size}_n_expert={n_expert}\"\\\n",
+    "+f\"n_task={n_task}_expert_dropout={expert_dropout}_tower_dropout={tower_dropout}\"\n",
+    "\n",
+    "print(log_dir)\n",
+    "print(bestmodel_save_dir)"
    ]
   },
   {
@@ -426,7 +453,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of parameters: 52746\n"
+      "Number of parameters: 52746\n",
+      "Number of parameters in MMoE: 42904\n"
      ]
     }
    ],
@@ -434,7 +462,13 @@
     "mmoe = MMoE(feature_dim=feature_dim,expert_dim=expert_dim,n_expert=n_expert,n_task=n_task,use_gate=use_gate, gate_dropout=gate_dropout, expert_dropout=expert_dropout, tower_dropout=tower_dropout)\n",
     "\n",
     "nParams = sum([p.nelement() for p in mmoe.parameters()])\n",
-    "print('Number of parameters: %d' % nParams)"
+    "print('Number of parameters: %d' % nParams)\n",
+    "\n",
+    "nParams_in_mmoe=0\n",
+    "for name,p in mmoe.named_parameters():\n",
+    "    if name.startswith(\"Expert_Gate\"):\n",
+    "        nParams_in_mmoe=nParams_in_mmoe+p.nelement()\n",
+    "print('Number of parameters in MMoE: %d' % nParams_in_mmoe)"
    ]
   },
   {
@@ -470,8 +504,8 @@
    },
    "outputs": [],
    "source": [
-    "if not os.path.exists(\"model/exp2/\"):\n",
-    "    os.makedirs(\"model/exp2/\") "
+    "if not os.path.exists(\"model/\"+model_name):\n",
+    "    os.makedirs(\"model/\"+model_name) "
    ]
   },
   {
@@ -483,7 +517,6 @@
    "source": [
     "def train(mymodel, lr, N_epochs, batch_size):\n",
     "    global writer\n",
-    "    log_dir = os.path.join(\"logs/exp2\", datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\"))\n",
     "    writer = SummaryWriter(log_dir=log_dir)\n",
     "    global tot_iters\n",
     "    tot_iters = 0\n",
@@ -557,7 +590,7 @@
     "        # save best model\n",
     "        if (val_losses[-1] < best_loss):\n",
     "            print(\"current epoch is the best so far. Saving model...\")\n",
-    "            torch.save(mymodel.state_dict(), f'model/exp2/best_model_{lr}_{N_epochs}_{batch_size}_{gate_dropout}_{expert_dropout}_{tower_dropout}')\n",
+    "            torch.save(mymodel.state_dict(), bestmodel_save_dir)\n",
     "            best_loss = val_losses[-1]\n",
     "    \n",
     "    writer.close()\n",
@@ -568,20 +601,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4d6c1be9-7753-4ef2-91f4-ced484eb0a79",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "batch_size=256\n",
-    "N_epochs=50\n",
-    "lr=0.0001"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
    "id": "33fc8dbd-93af-4087-b32a-d0132258ec9f",
    "metadata": {
     "tags": []
@@ -669,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "172da090-cd5d-4ac9-8e85-f7b9337bd952",
    "metadata": {
     "tags": []
@@ -678,10 +697,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x13da3647c50>"
+       "<matplotlib.legend.Legend at 0x187c43dd650>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -720,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "07be8985-798b-47da-aa00-f79836a6ee4f",
    "metadata": {
     "tags": []
@@ -729,7 +748,7 @@
    "source": [
     "# load best model based on validation\n",
     "mybestmodel=MMoE(feature_dim=feature_dim,expert_dim=expert_dim,n_expert=n_expert,n_task=n_task,use_gate=use_gate)\n",
-    "mybestmodel.load_state_dict(torch.load(f'model/exp2/best_model_{lr}_{N_epochs}_{batch_size}_{gate_dropout}_{expert_dropout}_{tower_dropout}'))\n",
+    "mybestmodel.load_state_dict(torch.load(bestmodel_save_dir))\n",
     "mybestmodel=mybestmodel.to(device)\n",
     "\n",
     "x_test_d, x_test_c=x_test_d.to(device), x_test_c.to(device)\n",
@@ -745,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "89fdb611-85ee-4def-809e-154933380a03",
    "metadata": {
     "tags": []
@@ -766,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "8eb92365-d745-4b88-b692-517b7a997c1b",
    "metadata": {
     "tags": []
@@ -790,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "a37a0feb-d23e-4712-a100-b9419f2f9012",
    "metadata": {},
    "outputs": [
@@ -800,7 +819,7 @@
        "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "617f90bd-9271-4214-bc54-d653bb2f26bb",
    "metadata": {
     "tags": []
@@ -825,7 +844,7 @@
        "       7.6985675e-12, 2.3840641e-08], dtype=float32)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "70d5c716-ba7e-451b-b52f-a0b51e7224ca",
    "metadata": {
     "tags": []
@@ -850,7 +869,7 @@
        "       4.4795431e-02, 5.9589747e-02], dtype=float32)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "3c95ddff-8e28-412d-a98e-2465433e5b03",
    "metadata": {
     "tags": []
@@ -873,7 +892,7 @@
        "tensor([0., 1., 1., 0., 1., 0., 1., 1., 0., 0.])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
